--- a/Modulo 2 - HTML5 e CSS3/guia2.css
+++ b/Modulo 2 - HTML5 e CSS3/guia2.css
@@ -1,12 +1,14 @@
 body {
     background-color: #EEE;
-    margin: 0px;
+    margin: 0;
 }
+
 .container {
     width: 100%;
     max-width: 1200px;
     margin: auto;
 }
+
 .topo {
     width: 100%;
     height: 100px;
@@ -14,29 +16,87 @@ body {
     text-align: center;
     line-height: 100px;
 }
+
+.menuMobile {
+    display: none;
+    font-size: 40px;
+}
+
+.menuMobile img {
+    width: 40px;
+    height: 30px;
+}
+
+.center {
+    float: left;
+}
+
 .menu {
     width: 25%;
     height: 30px;
     float: left;
 }
+
 .menu ul,
 .menu li {
     margin: 0%;
     padding: 0%;
 }
+
 .menu li {
     list-style: none;
     border-bottom: 1px solid #AAA;
     height: 30px;
     line-height: 30px;
 }
+
 .corpo {
     width: 50%;
     float: left;
 }
+
 .bannerDireita {
     background-color: #DDD;
     width: 25%;
     height: 300px;
     float: left;
+}
+
+.rodape {
+    width: 100%;
+    height: 150px;
+    text-align: center;
+    line-height: 150px;
+    background-color: #ff4500;
+    float: left;
+    max-width: 1200;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 800px) {
+    .corpo {
+        width: 75%;
+    }
+    .bannerDireita {
+        width: 100%;
+        height: 100px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .menu {
+        width: 100%;
+        height: 100px;
+    }
+    .corpo {
+        width: 100%;
+    }
+    .bannerDireita {
+        width: 100%;
+    }
+    .menu {
+        display: none;
+    }
+    .menuMobile {
+        display: block;
+    }
 }
