--- a/Modulo 2 - HTML5 e CSS3/style.css
+++ b/Modulo 2 - HTML5 e CSS3/style.css
@@ -41,3 +41,63 @@ LTS{
 
     }
 }
+
+.borda1 {
+    width: 400px;
+    height: 400px;
+    background-color: lime;
+    border-radius: 50px;
+}
+
+.borda2 {
+    width: 400px;
+    height: 400px;
+    background-color: darkorange;
+    border-top-left-radius: 200px;
+}
+
+.borda3 {
+    width: 400px;
+    height: 400px;
+    background-color: deeppink;
+    border-top-right-radius: 200px;
+}
+
+.borda4 {
+    width: 400px;
+    height: 400px;
+    background-color: goldenrod;
+    border-bottom-right-radius: 200px;
+}
+
+.borda5 {
+    width: 400px;
+    height: 400px;
+    background-color: deepskyblue;
+    border-bottom-left-radius: 200px;
+}
+
+.degrade {
+    width: 300px;
+    height: 300px;
+    /* primerio parametro em direcao vai ser feito medio em graus, e depois as cores que ele vai ter. */
+    background: linear-gradient(-45deg, blue, deepskyblue, skyblue, deeppink);
+}
+
+.bSombra {
+    width: 300px;
+    height: 300px;
+    background-color: limegreen;
+    /* 
+    1°prarametro = deslocamento horizontal
+    2ºprarametro = deslocamento vertical
+    3°parametro = blur ("espalhamento")
+    4°parametro = cor 
+    
+    */
+    box-shadow: 10px 10px 5px #888;
+}
+.tSombra {
+    text-shadow: 5px 5px 1px #bbbccc;
+    font-size: 50px;
+}
