--- a/Modulo 2 - HTML5 e CSS3/Projeto_portal/assets/CSS/style.css
+++ b/Modulo 2 - HTML5 e CSS3/Projeto_portal/assets/CSS/style.css
@@ -21,27 +21,6 @@ body {
     height: 30px;
     float: left;
 }
-.topoDireita {
-    width: 50%;
-    height: 30px;
-    float: right;
-}
-
-.topoDireita a {
-    height: 28px;
-    margin-top: 2px;
-    float: right;
-    background-color: #ff0000;
-    border-radius: 5px;
-}
-
-.topoDireita input {
-    width: 117px;
-    height: 23px;
-    outline: 0;
-    border-radius: 5px;
-    float: right;
-}
 
 .topoEsquerda ul {
     margin: 0;
@@ -69,47 +48,112 @@ body {
     color: #0000ff;
 }
 
+.topoDireita {
+    width: 50%;
+    height: 30px;
+    float: right;
+}
+
+.topoDireita a {
+    height: 26px;
+    margin-top: 2px;
+    float: right;
+    background-color: #ff0000;
+    border-radius: 5px;
+    margin-left: 3px;
+}
+
+.topoDireita input {
+    width: 117px;
+    height: 23px;
+    outline: 0;
+    border-radius: 5px;
+    float: right;
+}
 /* ---------------------------------TOPO PRETO ----------------------------- */
 
-/* ---------------------------------TOPO LOGO ----------------------------- */
+/* ---------------------------------TOPO publicidade ----------------------------- */
 
 .topoPublicidade {
-    height: 100px;
+    height: 95px;
 }
 
 .topoPublicidadeConteudo {
     margin: auto;
     width: 100%;
     max-width: 1040px;
-    height: 100px;
+    height: 95px;
 }
 
 .logo {
-    width: 35%;
-    height: 100px;
+    width: 230px;
+    height: 88px;
     float: left;
+    margin-top: 7px;
 }
 
-.publi {
-    width: 65%;
-    height: 100px;
+.topoPublicidade .banner {
+    width: 650px;
+    height: 80px;
     float: right;
+    margin-top: 7px;
+    background-color: #ff0000;
 }
 
-/* ---------------------------------TOPO LOGO ----------------------------- */
+/* ---------------------------------TOPO publicidade ----------------------------- */
 
 /* ---------------------------------TOPO MENU ----------------------------- */
 
 .menu {
-    height: 43px;
+    height: 40px;
     background-color: #ff0000;
 }
 
 .menuConteudo {
+    margin: auto;
     width: 100%;
-    max-width: 1040;
-    height: 43px;
+    max-width: 1040px;
+    height: 40px;
+}
+
+.menuConteudo ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.menuConteudo li {
+    display: inline;
     float: left;
+    line-height: 40px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.menuConteudo a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.menuConteudo li:hover .subMenu {
+    display: block;
+}
+
+.subMenu {
+    width: 150px;
+    background-color: #ff0000;
+    position: absolute;
+    display: none;
+}
+
+.subMenuItem {
+    height: 30px;
+    line-height: 30px;
+    padding-left: 10px;
+}
+
+.subMenuItem:hover {
+    background-color: #ff2222;
 }
 
 /* ---------------------------------TOPO MENU ----------------------------- */
